report4/doc/implementatiemodel/lv/landbouwgebruiksperceel/v0.0.1/generator-swagger.report.md
#||#  oslo-generator-swagger for language nl  

#||#  -------------------------------------  

2026-07-03T11:10:32.515Z warn: [QuadStore]: Circular reference detected for [[urn:oslo-toolchain:feb93fd5a0523a7fa91a961fc0bac4ccc2369cc083b0290517923250ec5ca9fd](all-landbouwgebruiksperceel.jsonld#L2136)](all-landbouwgebruiksperceel.jsonld#L450)

2026-07-03T11:10:32.516Z warn: [QuadStore]: Circular reference detected for [[urn:oslo-toolchain:feb93fd5a0523a7fa91a961fc0bac4ccc2369cc083b0290517923250ec5ca9fd](all-landbouwgebruiksperceel.jsonld#L2136)](all-landbouwgebruiksperceel.jsonld#L450)

2026-07-03T11:10:32.517Z warn: [QuadStore]: Circular reference detected for [urn:oslo-toolchain:ce9a0790af39eff0a81aceab94c1376ce308e9cc03e6ab80f51f06a376c0017e](all-landbouwgebruiksperceel.jsonld#L500)

2026-07-03T11:10:32.517Z warn: [QuadStore]: Circular reference detected for [urn:oslo-toolchain:ce9a0790af39eff0a81aceab94c1376ce308e9cc03e6ab80f51f06a376c0017e](all-landbouwgebruiksperceel.jsonld#L500)

2026-07-03T11:10:32.529Z warn: [QuadStore]: Circular reference detected for [[urn:oslo-toolchain:feb93fd5a0523a7fa91a961fc0bac4ccc2369cc083b0290517923250ec5ca9fd](all-landbouwgebruiksperceel.jsonld#L2136)](all-landbouwgebruiksperceel.jsonld#L450)

2026-07-03T11:10:32.530Z warn: [QuadStore]: Circular reference detected for [[urn:oslo-toolchain:feb93fd5a0523a7fa91a961fc0bac4ccc2369cc083b0290517923250ec5ca9fd](all-landbouwgebruiksperceel.jsonld#L2136)](all-landbouwgebruiksperceel.jsonld#L450)

2026-07-03T11:10:32.530Z warn: [QuadStore]: Circular reference detected for [urn:oslo-toolchain:ce9a0790af39eff0a81aceab94c1376ce308e9cc03e6ab80f51f06a376c0017e](all-landbouwgebruiksperceel.jsonld#L500)

2026-07-03T11:10:32.530Z warn: [QuadStore]: Circular reference detected for [urn:oslo-toolchain:ce9a0790af39eff0a81aceab94c1376ce308e9cc03e6ab80f51f06a376c0017e](all-landbouwgebruiksperceel.jsonld#L500)

