report4/doc/implementatiemodel/lv/landbouwgebruiksperceel/v0.1.0/generator-swagger.report.md
#||#  oslo-generator-swagger for language nl  

#||#  -------------------------------------  

2026-08-03T10:36:05.076Z warn: [SwaggerGenerationService]: Schema already exists for the label (Activiteittype) and will be overwritten.

2026-08-03T10:36:05.079Z error: Unknown cardinality for attribute [urn:oslo-toolchain:f20cda73cfb417abe8365bb630063bb1ef97f87fa44744e7df9eb7924459ebc2](all-landbouwgebruiksperceel.jsonld#L1773)

2026-08-03T10:36:05.081Z error: Unknown cardinality for attribute [urn:oslo-toolchain:c469b92c9eb43bd99aa38f720e9e14424754a17a3cb8b81d15d62e67d29b5e2a](all-landbouwgebruiksperceel.jsonld#L1803)

2026-08-03T10:36:05.082Z error: Unknown cardinality for attribute [urn:oslo-toolchain:c469b92c9eb43bd99aa38f720e9e14424754a17a3cb8b81d15d62e67d29b5e2a](all-landbouwgebruiksperceel.jsonld#L1803)

2026-08-03T10:36:05.083Z error: Unknown cardinality for attribute [urn:oslo-toolchain:c469b92c9eb43bd99aa38f720e9e14424754a17a3cb8b81d15d62e67d29b5e2a](all-landbouwgebruiksperceel.jsonld#L1803)

2026-08-03T10:36:05.085Z error: Unknown cardinality for attribute [urn:oslo-toolchain:f20cda73cfb417abe8365bb630063bb1ef97f87fa44744e7df9eb7924459ebc2](all-landbouwgebruiksperceel.jsonld#L1773)

2026-08-03T10:36:05.086Z error: Unknown cardinality for attribute [urn:oslo-toolchain:f20cda73cfb417abe8365bb630063bb1ef97f87fa44744e7df9eb7924459ebc2](all-landbouwgebruiksperceel.jsonld#L1773)

2026-08-03T10:36:05.097Z warn: [QuadStore]: Circular reference detected for [[urn:oslo-toolchain:feb93fd5a0523a7fa91a961fc0bac4ccc2369cc083b0290517923250ec5ca9fd](all-landbouwgebruiksperceel.jsonld#L2004)](all-landbouwgebruiksperceel.jsonld#L368)

2026-08-03T10:36:05.097Z warn: [QuadStore]: Circular reference detected for [[urn:oslo-toolchain:feb93fd5a0523a7fa91a961fc0bac4ccc2369cc083b0290517923250ec5ca9fd](all-landbouwgebruiksperceel.jsonld#L2004)](all-landbouwgebruiksperceel.jsonld#L368)

2026-08-03T10:36:05.098Z warn: [QuadStore]: Circular reference detected for [urn:oslo-toolchain:ce9a0790af39eff0a81aceab94c1376ce308e9cc03e6ab80f51f06a376c0017e](all-landbouwgebruiksperceel.jsonld#L418)

2026-08-03T10:36:05.098Z warn: [QuadStore]: Circular reference detected for [urn:oslo-toolchain:ce9a0790af39eff0a81aceab94c1376ce308e9cc03e6ab80f51f06a376c0017e](all-landbouwgebruiksperceel.jsonld#L418)

